Bug 156325 - Index of tables: ctrl + click on an item does not work
Summary: Index of tables: ctrl + click on an item does not work
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2023-07-17 10:02 UTC by Andreas Heinisch
Modified: 2023-07-18 08:54 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Heinisch 2023-07-17 10:02:35 UTC
Description:
Index of tables: ctrl + click on an item does not jump to the according table.

Steps to Reproduce:
1. Open writer
2. Insert a second page and insert a table
3. Right click on the table -> Insert Caption
4. Insert some text like "TestTable1"
5. Insert a table index under Insert -> Table of Contents and Indexes
6. In the Table of Contents and Indexes select Index of Tables in the type selectbox
7. Insert the index by pressing ok
8. There should be an index now containing the table "TestTable1"
8. ctrl + click on the item in  the index of tables

Actual Results:
Nothing happens

Expected Results:
ctrl + click should change the mouse pointer and jump to the correct table after clicking a table caption.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8e4fb36a69d517bc5111d64d12b2c7df4f9791de
CPU threads: 16; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: CL threaded
Comment 1 Commit Notification 2023-07-18 08:52:12 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c4bbd05d506c14a29cfb07f118f710c11958d83c

tdf#156325 - Index of tables: support ctrl + click on an item

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.