tdf#156325 - Index of tables: support ctrl + click on an item

Change-Id: I6de76d946ab0810cc3c2ba9fbec5d3c1db043a1e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154574
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>